# kubernetes

./: -  .bazelrc  .bazelversion  .ci-operator.yaml  .deepsource.toml  .dockerignore  .dockerized-kube-version-defs  .drone.yml  .gazelcfg.json  .generated_docs  .generated_files  .gitattribute  .gitattributes  .gitignore  .gitpod.yml  .go-version  .golangci.yaml  .import-restrictions  .kazelcfg.json  .mailmap  .orange-ci.yml  .patch  .ros  .ruleguard_rules.go  .snyk  .synk  .travis.yml  1715347503  1715347640  1715347888  1715348101  1715348243  3  404.md  AGENT.md  AGENTS.md  BUILD  BUILD.bazel  CHANGELOG-1.10.md  CHANGELOG-1.11.md  (+294 more)
.circleci/: config.yml
.devcontainer/: OWNERS  devcontainer.json  setup.sh  welcome-message.txt
.devcontainers/: OWNERS  devcontainer.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  OWNERS  PULL_REQUEST_TEMPLATE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  dependabot.yml  kubeadm.yaml
.haystack/: .primefile  ENTITYFILE_k8s_prime.md  audit.jsonl  boot.md
.openshift-tests-extension/: openshift_payload_hyperkube.json
CHANGELOG/: CHANGELOG-1.10.md  CHANGELOG-1.11.md  CHANGELOG-1.12.md  CHANGELOG-1.13.md  CHANGELOG-1.14.md  CHANGELOG-1.15.md  CHANGELOG-1.16.md  CHANGELOG-1.17.md  CHANGELOG-1.18.md  CHANGELOG-1.19.md  CHANGELOG-1.2.md  CHANGELOG-1.20.md  CHANGELOG-1.21.md  CHANGELOG-1.22.md  CHANGELOG-1.23.md  CHANGELOG-1.23.mdnaw  CHANGELOG-1.24.md  CHANGELOG-1.25.md  CHANGELOG-1.26.md  CHANGELOG-1.27.md  CHANGELOG-1.28.md  CHANGELOG-1.29.md  CHANGELOG-1.3.md  CHANGELOG-1.30.md  CHANGELOG-1.31.md  CHANGELOG-1.32.md  CHANGELOG-1.33.md  CHANGELOG-1.34.md  CHANGELOG-1.35.md  CHANGELOG-1.36.md  CHANGELOG-1.37.md  CHANGELOG-1.4.md  CHANGELOG-1.5.md  CHANGELOG-1.6.md  CHANGELOG-1.7.md  CHANGELOG-1.8.md  CHANGELOG-1.9.md  OWNERS  README.md
Doc/: Debugging Pods in CrashLoopBackOff.md
Godeps/: .license_file_state  Godeps.json  Godeps.json-bk  LICENSES  LICENSES.md  OWNERS
LICENSES/: LICENSE  OWNERS
_data/: articles.yml  decksources.yml  events.yml  postsnews.yml  presentations.yml  videos.yml
_docs/: README.md  TESTING.md  feat1.md  feat2.md  index.md  test-features.sh
_includes/: 404content.html  archivedocnotice.html  definitions.html  docfooter.html  dochead.html  documentation.html  docversionselector.html  extensions-v1beta1-definitions.html  extensions-v1beta1-operations.html  footer.html  head.html  header.html  hero.html  nav_v1.0.html  nav_v1.1.html  nav_v1_0.html  nav_vHEAD.html  operations.html  v1-definitions.html  v1-operations.html
_layouts/: community.html  default.html  dochead.html  docwithnav.html  events.html  gettingstarted.html  homepage.html  media.html  news.html
_sass/: _animations.scss  _api_reference.scss  _bootstrap.scss  _documents.scss  _fonts.scss  _globals.scss  _ie.scss  _md.scss  _navigation.scss  _reset.scss  _sm.scss  _syntax.scss  _template.scss  _xs.scss  test.scss
_tools/: import_docs.sh  import_master_docs.sh
_v1.0/: api-ref.md  deploy-clusters.md  gs-custom.md  multi-tier.md
_v1.1/: api-ref.md  app-admin-detailed.md  basicstutorials.md  deploy-clusters.md  gs-custom.md  gs-localmachine.md  gs-turnkey.md  index.md  multi-tier.md  setup-config.md
_vmod/: .gitignore  populate-from-staging.sh
api/: BUILD  Dockerfile  OWNERS  README.md  kubernetes.html  kubernetes.raml  lmktfyrnetes.html  lmktfyrnetes.raml  raml2html.dockerfile
basenode.etcd/: log
build-tools/: BUILD  OWNERS  README.md  common.sh  copy-output.sh  make-build-image.sh  make-clean.sh  push-federation-images.sh  release.sh  run.sh  shell.sh  versionize-docs.sh
changelog/: CHANGELOG-1.4.md  CHANGELOG-1.6.md  CHANGELOG-1.7.md  CHANGELOG.md
changelogs/: CHANGELOG.md  OWNERS
cluster/: BUILD  OWNERS  README.md  cli.sh  clientbin.sh  cloudcfg.sh  common.sh  config-default.sh  config-test.sh  contrail_networking_setup.sh  env  get-kube-binaries.sh  get-kube-local.sh  get-kube.sh  get-lmktfy.sh  kube-down-azure.sh  kube-down.sh  kube-env.sh  kube-push.sh  kube-up-azure.sh  kube-up.sh  (+23 more)
safer-api-server/: Cargo.toml
safer-api-server/src/: main.rs
(+106315 files in other folders)
