package(default_visibility = ["//visibility:public"])

licenses(["notice"])

load("@io_bazel_rules_go//go:def.bzl", "go_prefix")
load("@io_kubernetes_build//defs:build.bzl", "gcs_upload")

go_prefix("k8s.io/kubernetes")

gcs_upload(
    name = "ci-artifacts",
    data = [
        "//build/debs",
    ],
)
