[package]
name = "safer-api-server"
version = "0.1.0"
edition = "2021"
description = "The Kubernetes API Server, but safer. Written in Rust btw."

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
